WIP: Trying to fix font sizes to be responsive, but not too big for small browser screens

--- a/src/containers/Home/index.css
+++ b/src/containers/Home/index.css
@@ -77,20 +77,8 @@
 #latestReleases .releaseCover {
   display: none;
 }
-
 #latestReleases .releasePreviewWrapper {
-<<<<<<< Updated upstream
-  height: auto;
-  object-fit: contain;
-  min-height: 150px;
-  max-height: 200px;
-=======
   height: 150px;
-  font-size: 2vmin;
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
 }
 
 .home {
@@ -120,6 +108,7 @@
 
   #latestReleases .mediaPlayer {
     width: 100%;
+    height: 30px;
   }
 }
 
