--- a/src/containers/ReleasePreview/index.css
+++ b/src/containers/ReleasePreview/index.css
@@ -7,7 +7,6 @@
   width: 100%;
   border-bottom: solid #ffcebe;
   box-sizing: border-box;
-  font-size: 2.5vmin;
 }
 
 .releasePreview {
@@ -15,7 +14,6 @@
   align-items: flex-start;
   object-fit: scale-down;
   width: 100%;
-  height: auto;
   margin-top: 2vh;
   margin-right: 2vh;
   padding: 0;
@@ -38,7 +36,7 @@
   margin-bottom: 3vh;
 }
 
-@media only screen and (max-width: 1030px) {
+@media only screen and (max-width: 480px) {
   .releasePreview img {
     height: 14vh;
     width: 14vh;
@@ -50,12 +48,9 @@
     display: flex;
   }
 
-  .releasePreview .releaseHeadline{
-    font-size: 1vmin;
-  }
-
   .releasePreviewWrapper {
     width: 50%;
+    height: 10vh;
     display: flex;
     margin-bottom: 1.5vh;
   }
